Fix issue in Unmapper implementation not including `pagePosition` in address computation